--- a/app/src/main/res/drawable/editextloginshape.xml
+++ b/app/src/main/res/drawable/editextloginshape.xml
@@ -3,7 +3,7 @@
     <solid android:color="#ffffffff"/>
 
     <stroke android:width="1dp"
-        android:color="#BCC4CB"
+        android:color="@color/colorlightblue"
         />
 
     <padding android:left="1dp"
