--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="redshed">#FFE5E5 </color>
     <color name="trackIssuebtnclr">#FFF7E2 </color>
     <color name="btntexcolor">#FFB800 </color>
+    <color name="whitesmoke">#F5F5F5 </color>
 
 
 
