--- a/app/src/main/res/layout/activity_edit_details.xml
+++ b/app/src/main/res/layout/activity_edit_details.xml
@@ -280,8 +280,8 @@
     <TextView
         android:id="@+id/TvproductName"
         android:text="Product Name"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/LayoutRl5img"
+        android:layout_marginTop="233dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="14sp"
         android:textColor="@color/subhadingtext"
@@ -293,6 +293,7 @@
         app:layout_constraintTop_toBottomOf="@+id/TvproductName"
         app:layout_constraintStart_toStartOf="@id/TvproductName"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
         android:paddingLeft="20dp"
         android:inputType="text"
         android:background="@drawable/editextloginshape"
